--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -38,19 +38,19 @@
             </MenuItem>
         </Menu>
         
-        <avalonDock:DockingManager Grid.Row="1" x:Name="dockManager">
-            <!--<avalonDock:DockingManager.Theme>
+        <avalonDock:DockingManager Grid.Row="1" x:Name="dockManager" AllowMixedOrientation="True">
+            <avalonDock:DockingManager.Theme>
                 <avalonDock:VS2010Theme/>
-            </avalonDock:DockingManager.Theme>-->
+            </avalonDock:DockingManager.Theme>
             <avalonDock:LayoutRoot PropertyChanged="OnLayoutRootPropertyChanged">
                 <avalonDock:LayoutPanel Orientation="Horizontal">
                     <avalonDock:LayoutAnchorablePane DockWidth="100">
-                        <avalonDock:LayoutAnchorable  ContentId="WinFormsWindow" Title="WinForms Window" ToolTip="My WinForms Tool" CanHide="False" CanClose="False" >
+                        <avalonDock:LayoutAnchorable x:Name="WinFormsWindow"  ContentId="WinFormsWindow" Title="WinForms Window" ToolTip="My WinForms Tool" CanHide="False" CanClose="False" >
                             <winformsIntegration:WindowsFormsHost x:Name="winFormsHost"/>
                         </avalonDock:LayoutAnchorable>
                     </avalonDock:LayoutAnchorablePane>
                     <avalonDock:LayoutDocumentPaneGroup>
-                        <avalonDock:LayoutDocumentPane >
+                        <avalonDock:LayoutDocumentPane>
                             <avalonDock:LayoutDocument ContentId="document1" Title="Document 1" IconSource="/AvalonDock.TestApp;component/Images/alarm-clock-blue.png" >
                                 <StackPanel>
                                     <TextBox Text="Document 1 Content"/>
