Build 2.0.1285 - Fixed #15446, LayoutElement now derives from DependencyObject (see PRISM or Caliburn)
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@94161 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -34,10 +34,10 @@
                 <MenuItem Header="Load" Command="{Binding LoadLayoutCommand, ElementName=mainWindow}"/>
                 <MenuItem Header="Save" Command="{Binding SaveLayoutCommand, ElementName=mainWindow}"/>
             </MenuItem>
-        </Menu>
+        </Menu><!--AnchorablesSource="{Binding Tools}" DocumentsSource="{Binding Files}"-->
         <avalonDock:DockingManager x:Name="dockManager" 
+                                   AnchorablesSource="{Binding Tools}" 
                                    DocumentsSource="{Binding Files}"
-                                   AnchorablesSource="{Binding Tools}"
                                    ActiveContent="{Binding ActiveDocument, Mode=TwoWay, Converter={StaticResource ActiveDocumentConverter}}"
                                    Grid.Row="1">
             <avalonDock:DockingManager.Theme>
