--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -40,7 +40,7 @@
         
         <avalonDock:DockingManager Grid.Row="1" x:Name="dockManager" AllowMixedOrientation="True">
             <avalonDock:DockingManager.Theme>
-                <avalonDock:VS2010Theme/>
+                <avalonDock:AeroTheme/>
             </avalonDock:DockingManager.Theme>
             <avalonDock:LayoutRoot PropertyChanged="OnLayoutRootPropertyChanged">
                 <avalonDock:LayoutPanel Orientation="Horizontal">
