--- a/AvalonDock/AvalonDock.Themes.Aero/Brushes.xaml
+++ b/AvalonDock/AvalonDock.Themes.Aero/Brushes.xaml
@@ -18,11 +18,18 @@
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor3" 
                      Color="Black"/>
 
-    <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor4" 
-                     Color="#9196A2"/>
+    <LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor4"
+                         StartPoint="0,0"
+                         EndPoint="0,1">
+        <LinearGradientBrush.GradientStops>
+            <GradientStop Color="#CFCFCF" Offset="0" />
+            <GradientStop Color="#F2F2F2" Offset="1" />
+        </LinearGradientBrush.GradientStops>
+    </LinearGradientBrush>
 
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor5" 
-                     Color="#69A1BF"/>
+                     Color="#898C95"/>
+
     
     <LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor6"
                          StartPoint="0,0"
@@ -54,35 +61,36 @@
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor11" 
                      Color="#FFBBC0C7" />
 
-    <!--<SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor12"
-                     Color="White"/>-->
+    <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor12"
+                     Color="#555564"/>
 
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor13"
                      Color="White"/>
 
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor14"
-                     Color="White"/>
+                     Color="#69A1BF"/>
 
     <LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor15"
                          StartPoint="0,0"
                          EndPoint="0,1">
-        <GradientStop Color="#FFFCF2" Offset="0" />
-        <GradientStop Color="#FFEDBA" Offset="0.5" />
-        <GradientStop Color="#FFE8A6" Offset="0.5" />
-        <GradientStop Color="#FFE8A6" Offset="1" />
+        <GradientStop Color="#8FADCE" Offset="0" />
+        <GradientStop Color="#BDD3EF" Offset="1" />
     </LinearGradientBrush>
 
 
     <LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor16"
                          StartPoint="0,0"
                          EndPoint="0,1">
-        <GradientStop Color="#4D6082" Offset="0" />
-        <GradientStop Color="#3D5277" Offset="1" />
+        <GradientStop Color="#B7CAE0" Offset="0" />
+        <GradientStop Color="#E8F0FF" Offset="1" />
     </LinearGradientBrush>
-
-    <!--<SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor17" 
-        Color="White"/>
-
+    <LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor17"
+                         StartPoint="0,0"
+                         EndPoint="0,1">
+        <GradientStop Color="#F7FCFE" Offset="0" />
+        <GradientStop Color="#81D0F1" Offset="1" />
+    </LinearGradientBrush>
+    <!--
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor18" 
         Color="Black"/>
 
@@ -113,24 +121,21 @@
         <GradientStop Color="#FFE8A6" Offset="1" />
     </LinearGradientBrush>
 
-    <!--<LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor26" StartPoint="0,0" EndPoint="0,1">
-        <LinearGradientBrush.GradientStops>
-            <GradientStop Color="#50FFE8A6" Offset="0" />
-            <GradientStop Color="#50FFE8A6" Offset="0.5" />
-            <GradientStop Color="#50FFEDBA" Offset="0.5" />
-            <GradientStop Color="#50FFFCF2" Offset="1" />
-        </LinearGradientBrush.GradientStops>
+    <LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor26"
+                         StartPoint="0,0"
+                         EndPoint="0,1">
+        <GradientStop Color="#F2F2F2" Offset="0" />
+        <GradientStop Color="#CFCFCF" Offset="1" />
     </LinearGradientBrush>
-
+    
     <LinearGradientBrush x:Key="AvalonDock_ThemeAero_BaseColor27"
-                         StartPoint="0,0" EndPoint="0,1">
-        <LinearGradientBrush.GradientStops>
-            <GradientStop Color="#50FFE8A6" Offset="0" />
-            <GradientStop Color="#50FFE8A6" Offset="0.5" />
-            <GradientStop Color="#50FFEDBA" Offset="0.5" />
-            <GradientStop Color="#50FFFCF2" Offset="1" />
-        </LinearGradientBrush.GradientStops>
-    </LinearGradientBrush>-->
+                         StartPoint="0,0"
+                         EndPoint="0,1">
+        <GradientStop Color="#A7D9F5" Offset="0" />
+        <GradientStop Color="#BEE6FD" Offset="0.5" />
+        <GradientStop Color="#D9F0FC" Offset="0.5" />
+        <GradientStop Color="#FAFDFE" Offset="1" />
+    </LinearGradientBrush>
 
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor28"
                          Color="White"/>
@@ -141,8 +146,8 @@
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor31" 
         Color="#FFE8A6"/>
 
-    <!--<SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor32"
-                     Color="Transparent"/>-->
+    <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor32"
+                     Color="#3C7FB1"/>
 
     <SolidColorBrush x:Key="AvalonDock_ThemeAero_BaseColor33"
         Color="#3D5277"/>    
